k8s/apps/base/matrix/delegation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delegation
spec:
  selector:
    matchLabels:
      app: delegation
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: delegation
    spec:
      nodeSelector:
        matrix: "true"
      tolerations:
      - key: matrix
        operator: Equal
        value: "true"
        effect: NoSchedule
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: delegation
              topologyKey: kubernetes.io/hostname
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: conf
        configMap:
          name: delegation-config
          items:
          - key: default.conf
            path: default.conf
