k8s/apps/base/matrix/delegation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delegation
  labels:
    app: delegation
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: delegation
  type: ClusterIP
